# sophy4

./: .gitignore  README.MD  README.md  TradingWorkflowDiagram.mermaid  cli.py  config.py  htf_confirmation_fix.py  instruments_analysis.ipynb  long_only_ftmo_tester.py  main.py  nuclear_solution.py  params_json  portofolio_backtest.py  project_files.old  pyproject.toml  quick _test_direct.py  quick test.py  quick_debug_test.py  requirements.txt  run.py  run_backtest_from_json.py  run_extended_backtest.py  run_live_trading.py  run_tests.sh  sophy_commander.py  test.py  test_extended_strategy.py  test_optimizer.py  timeframe_config.json
LSTM/: train_lstm_model.py
backtest/: backtest.py  commandos.txt  data_loader.py  extended_backtest.py
docs/: user_manual.md
ftmo_compliance/: ftmo_check.py
live/: live_trading.py
models/: lstm_US30.cash_H1.h5
models/models/: lstm_GER40.cash_H1.h5
monitor/: monitor.py
optimization/: optimize.py  quick_optimize.py  verify_backtest_fixed.ipynb
results/: OrderBlockLSTMStrategy_GER40.cash_H1_results_20250427.json  OrderBlockLSTMStrategy_GER40.cash_H1_trades_20250427.csv  monitor_log.txt
risk/: risk_management.py
strategies/: __init__.py  ai_lstm_strategy.py  base_strategy.py  bollong.py  bollong_vectorized.py  compatible_simple_ob_strategy.py  order_block_lstm_strategy.py  simple_order_block.py  super_simple_ob_strategy.py  train_dax_spike_model.py  train_lstm_model.py
utils/: data_utils.py  error_handling.py  indicator_utils.py  logging_setup.py  parameter_manager.py  plotting.py  profiling.py
(+2 files in other folders)
