# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophy4"
version = "0.1.0"
description = "Professional trading framework with FTMO compliance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "vectorbt>=0.27.2",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.10.1",
    "MetaTrader5>=5.0.4874",
    "tensorflow>=2.19.0",
    "scikit-learn>=1.6.1",
    "pydantic>=2.0.0",
]

[project.scripts]
sophy4 = "sophy4.cli:app"

[tool.setuptools]
packages = ["sophy4", "backtest", "live", "risk", "monitor", "ftmo_compliance", "strategies", "utils", "optimization"]

[tool.setuptools.package-dir]
sophy4 = "."